--- a/templates/content.html
+++ b/templates/content.html
@@ -158,7 +158,7 @@
     <div class="container">
         <h2>Content</h2>
         {% if content %}
-            <p>Uploaded by: {{ content.username }}</p>
+        <p>Uploaded by: {{ 'Anonymous' if content.username == 'None' else content.username }}</p>
             <p>Created at: {{ content.created_at }}</p>
             
             {% if highlighted_content %}
