--- a/templates/login.html
+++ b/templates/login.html
@@ -108,7 +108,14 @@
     </style>
 </head>
 <body>
-    <a href="/" class="back-button">&#8592;</a>
+    <h1>Login</h1>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <div class="content">
         <div class="container">
             <h2>Login to sxbin</h2>
@@ -123,7 +130,7 @@
                 </label>
                 <input type="submit" value="Login">
             </form>
-            <p>Don't have an account? <a href="{{ url_for('register') }}">Register</a></p>
+            <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
         </div>
     </div>
 
